[gd_scene load_steps=17 format=2]

[ext_resource path="res://Screens/ScreenGallery/ScreenGallery.gd" type="Script" id=1]
[ext_resource path="res://ChapterListingFont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Fonts/NotoSerif-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://stepmania-compat/smScreenInOut.gd" type="Script" id=4]
[ext_resource path="res://Screens/BackButton.tscn" type="PackedScene" id=5]
[ext_resource path="res://Ext/toolbarSelected.png" type="Texture" id=7]
[ext_resource path="res://Ext/toolbarUnsel.png" type="Texture" id=8]
[ext_resource path="res://stepmania-compat/Sound.gd" type="Script" id=9]
[ext_resource path="res://Ext/Assets_Sounds_Click.wav" type="AudioStream" id=10]
[ext_resource path="res://stepmania-compat/smSprite.gd" type="Script" id=69]
[ext_resource path="res://Ext/17xh-Networld.png" type="Texture" id=70]

[sub_resource type="DynamicFont" id=1]
size = 60
outline_size = 1
outline_color = Color( 0, 0.717647, 1, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=7]
size = 45
outline_size = 1
outline_color = Color( 0, 0.717647, 1, 1 )
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=8]
size = 33
outline_size = 1
outline_color = Color( 0, 0.717647, 1, 1 )
font_data = ExtResource( 3 )

[sub_resource type="Shader" id=2]
code = "shader_type canvas_item;
render_mode blend_mix;

uniform vec2 offset = vec2(8.0, 8.0);
uniform vec4 modulate : hint_color;

void fragment() {
	vec2 ps = TEXTURE_PIXEL_SIZE;

	vec4 shadow = vec4(modulate.rgb, texture(TEXTURE, UV - offset * ps).a * modulate.a);
	vec4 col = texture(TEXTURE, UV);

	COLOR = mix(shadow, col, col.a);
}"

[sub_resource type="ShaderMaterial" id=3]
shader = SubResource( 2 )
shader_param/offset = Vector2( 8, 8 )
shader_param/modulate = null

[node name="Node2D" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 1 )

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
script = ExtResource( 9 )

[node name="Click" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="smSprite" type="TextureRect" parent="."]
modulate = Color( 0.733333, 0.733333, 0.733333, 1 )
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 70 )
stretch_mode = 7
script = ExtResource( 69 )

[node name="Sections" type="GridContainer" parent="."]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -903.0
margin_top = 130.0
margin_right = 903.0
margin_bottom = 130.0
mouse_filter = 2
custom_constants/vseparation = 50
custom_constants/hseparation = 30
columns = 10
__meta__ = {
"_edit_group_": true
}

[node name="Base" type="Control" parent="Sections"]
margin_right = 276.0
rect_min_size = Vector2( 276, 0 )

[node name="TextureRect" type="TextureRect" parent="Sections/Base"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="Sections/Base"]
margin_top = 14.0
margin_right = 138.0
margin_bottom = 59.0
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Sections/Base"]
margin_top = 15.0
margin_right = 276.0
margin_bottom = 98.0
rect_min_size = Vector2( 276, 0 )
custom_fonts/font = SubResource( 1 )
text = "Base"
align = 1

[node name="Outdoors1" type="Control" parent="Sections"]
margin_left = 306.0
margin_right = 582.0
rect_min_size = Vector2( 276, 0 )

[node name="TextureRect" type="TextureRect" parent="Sections/Outdoors1"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="Sections/Outdoors1"]
margin_top = 14.0
margin_right = 138.0
margin_bottom = 59.0
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Sections/Outdoors1"]
margin_top = 20.0
margin_right = 276.0
margin_bottom = 103.0
rect_min_size = Vector2( 276, 0 )
custom_fonts/font = SubResource( 7 )
text = "Outdoors 1"
align = 1
valign = 1

[node name="Outdoors2" type="Control" parent="Sections"]
margin_left = 612.0
margin_right = 888.0
rect_min_size = Vector2( 276, 0 )

[node name="TextureRect" type="TextureRect" parent="Sections/Outdoors2"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="Sections/Outdoors2"]
margin_top = 14.0
margin_right = 138.0
margin_bottom = 59.0
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Sections/Outdoors2"]
margin_top = 20.0
margin_right = 276.0
margin_bottom = 103.0
rect_min_size = Vector2( 276, 0 )
custom_fonts/font = SubResource( 7 )
text = "Outdoors 2"
align = 1
valign = 1

[node name="BronyaSeele" type="Control" parent="Sections"]
margin_left = 918.0
margin_right = 1194.0
rect_min_size = Vector2( 276, 0 )

[node name="TextureRect" type="TextureRect" parent="Sections/BronyaSeele"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="Sections/BronyaSeele"]
margin_top = 14.0
margin_right = 138.0
margin_bottom = 59.0
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Sections/BronyaSeele"]
margin_top = 20.0
margin_right = 276.0
margin_bottom = 103.0
rect_min_size = Vector2( 276, 0 )
custom_fonts/font = SubResource( 8 )
text = "Bronya & Seele"
align = 1
valign = 1

[node name="Others" type="Control" parent="Sections"]
margin_left = 1224.0
margin_right = 1500.0
rect_min_size = Vector2( 276, 0 )

[node name="TextureRect" type="TextureRect" parent="Sections/Others"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="Sections/Others"]
margin_top = 14.0
margin_right = 138.0
margin_bottom = 59.0
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Sections/Others"]
margin_top = 15.0
margin_right = 276.0
margin_bottom = 98.0
rect_min_size = Vector2( 276, 0 )
custom_fonts/font = SubResource( 1 )
text = "Others"
align = 1

[node name="Misc" type="Control" parent="Sections"]
margin_left = 1530.0
margin_right = 1806.0
rect_min_size = Vector2( 276, 0 )

[node name="TextureRect" type="TextureRect" parent="Sections/Misc"]
visible = false
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 2, 2 )
texture = ExtResource( 7 )

[node name="TextureRect2" type="TextureRect" parent="Sections/Misc"]
margin_top = 14.0
margin_right = 138.0
margin_bottom = 59.0
rect_scale = Vector2( 2, 2 )
mouse_default_cursor_shape = 2
texture = ExtResource( 8 )

[node name="Label" type="Label" parent="Sections/Misc"]
margin_top = 15.0
margin_right = 276.0
margin_bottom = 98.0
rect_min_size = Vector2( 276, 0 )
custom_fonts/font = SubResource( 1 )
text = "Misc"
align = 1

[node name="ColorRect" type="ColorRect" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -900.0
margin_top = -320.0
margin_right = 900.0
margin_bottom = 400.0
color = Color( 0, 0.054902, 0.258824, 0.470588 )

[node name="Galleries" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2

[node name="GalleryBase" type="GridContainer" parent="Galleries"]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -880.0
margin_top = -270.0
margin_right = 880.0
margin_bottom = 350.0
size_flags_horizontal = 3
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 5
__meta__ = {
"_edit_group_": true
}

[node name="GalleryOutdoors1" type="GridContainer" parent="Galleries"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 67.551
margin_top = 1166.12
margin_right = 1827.55
margin_bottom = 1786.12
size_flags_horizontal = 3
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 5
__meta__ = {
"_edit_group_": true
}

[node name="GalleryOutdoors2" type="GridContainer" parent="Galleries"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 70.687
margin_top = 1872.74
margin_right = 1830.69
margin_bottom = 2492.74
size_flags_horizontal = 3
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 5
__meta__ = {
"_edit_group_": true
}

[node name="GalleryBronyaSeele" type="GridContainer" parent="Galleries"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2340.28
margin_top = 1183.58
margin_right = 4100.28
margin_bottom = 1803.58
size_flags_horizontal = 3
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 5
__meta__ = {
"_edit_group_": true
}

[node name="GalleryOthers" type="GridContainer" parent="Galleries"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 2345.62
margin_top = 2037.88
margin_right = 4105.62
margin_bottom = 2657.88
size_flags_horizontal = 3
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 5
__meta__ = {
"_edit_group_": true
}

[node name="GalleryMisc" type="GridContainer" parent="Galleries"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = 3333.39
margin_top = 258.871
margin_right = 5093.39
margin_bottom = 878.871
size_flags_horizontal = 3
custom_constants/vseparation = 40
custom_constants/hseparation = 40
columns = 5
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="."]
margin_left = 40.0
margin_right = 641.0
margin_bottom = 116.0
custom_fonts/font = ExtResource( 2 )
text = "Gallery"

[node name="Polygon2D" type="Polygon2D" parent="."]
color = Color( 0, 0.27451, 1, 1 )
offset = Vector2( 0, 120 )
polygon = PoolVector2Array( 0, 0, 1800, 0, 1800, 5, 0, 5 )
vertex_colors = PoolColorArray( 1, 1, 1, 1, 1, 1, 1, 0, 1, 1, 1, 0, 1, 1, 1, 1 )

[node name="Sprite" type="Sprite" parent="."]
visible = false
material = SubResource( 3 )
position = Vector2( 1022, -366 )
texture = ExtResource( 70 )

[node name="BackButton" parent="." instance=ExtResource( 5 )]

[node name="GalleryFullscreen" type="Control" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_default_cursor_shape = 2

[node name="ColorRect" type="ColorRect" parent="GalleryFullscreen"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
color = Color( 0, 0, 0, 1 )

[node name="1" type="TextureRect" parent="GalleryFullscreen"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 2
expand = true
stretch_mode = 6
script = ExtResource( 69 )

[node name="2" type="TextureRect" parent="GalleryFullscreen"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 2
stretch_mode = 6
script = ExtResource( 69 )

[node name="3" type="TextureRect" parent="GalleryFullscreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 2
stretch_mode = 6
script = ExtResource( 69 )

[node name="4" type="TextureRect" parent="GalleryFullscreen"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 2
mouse_default_cursor_shape = 2
stretch_mode = 6
script = ExtResource( 69 )

[node name="Tween" type="Tween" parent="."]

[node name="smScreenInOut" type="ColorRect" parent="."]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 1 )
script = ExtResource( 4 )

[connection signal="gui_input" from="BackButton" to="." method="_on_BackButton_gui_input"]
[connection signal="gui_input" from="GalleryFullscreen" to="." method="_on_GalleryFullscreen_gui_input"]
